# __cfab_demon

./: .env.example  .env_ftp  .gitignore  .mcp.json  .pyre_configuration  AGENTS.md  AI_raport.md  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  PARITY.md  RAPORT_sync_blacklist_petla.md  TODO.md  VERSION  _diag.py  analysis_results.md  build.rs  build_all.py  build_all_macos.py  build_common.py  build_demon.py  build_release.py  check_db_sizes.py  claude.md  clean.py  cleanup_files.py  cleanup_files_v2.py  compare_locales.py  dashboard_build.py  dashboard_dev.py  data.md  database_management_plan.md  db_fix.py  debug_check_db.py  delta_sync_plan.md  demon_dev.py  deny.toml  deploy.py  diag_db.py  doctor.config.json  (+37 more)
.agents/: instructions.md
.cargo/: config.toml
.codex/: config.toml
.playwright-mcp/: page-2026-06-17T14-38-08-933Z.yml  page-2026-06-17T17-19-55-911Z.yml
_PM/: cfab_mod_dirs.py  cfab_mod_log.py  cfab_mod_new_prj.py  cfab_mod_strings.py  cfab_mod_tools.py  cfab_mod_view.py  pm_nx.py  pref.py
_do_usuniecia/: _diag.py  check_git.py  db_fix.py  debug_check_db.py  fix-dashboard.py  get_stats.py  map_UI.md  move_debug.py  query.py  run_diag.bat  strings.md
assets/: app.rc  generate_attention_icon.py
dashboard/: check.bat  debug.js  debug2.js  doctor.config.json  eslint.config.js  fix_ai.py  fix_dash.js  get_logs.py  index.html  knip.json  package-lock.json  package.json  run_tsc.js  test_dates.py  test_db.js  test_esbuild.mjs  tsconfig.app.json  update_filter.py  update_sessions.py  update_sessions_ts.py  vite.config.ts  vitest.config.ts  vitest.setup.ts
dashboard/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.macos.conf.json
dashboard/src-tauri/capabilities/: default.json
dashboard/src-tauri/icons/: icon.icns
dashboard/src-tauri/resources/sql/: schema.sql
dashboard/src-tauri/scripts/: gen_webrpc.cjs
dashboard/src-tauri/src/: db.rs  db_migrations.rs  lib.rs  main.rs  refactor_db.py
dashboard/src-tauri/src/commands/: analysis.rs  assignment_model.rs  bughunter.rs  clients.rs  daemon.rs  daily_store_bridge.rs  dashboard.rs  database.rs  datetime.rs  delta_export.rs  error.rs  estimates.rs  export.rs  helpers.rs  import.rs  import_data.rs  lan_server.rs  lan_sync.rs  log_management.rs  manual_sessions.rs  mcp_server.rs  mod.rs  monitored.rs  online_sync.rs  pm.rs  pm_manager.rs  projects.rs  report.rs  secure_store.rs  sessions.rs  settings.rs  sql_fragments.rs  sync.rs  sync_log.rs  sync_markers.rs  time_algorithm.rs  types.rs  user_settings.rs  webserver.rs
dashboard/src-tauri/src/commands/assignment_model/: auto_safe.rs  config.rs  context.rs  folder_scan.rs  mod.rs  scoring.rs  training.rs
dashboard/src-tauri/src/commands/daemon/: autostart_win.rs  control.rs  mod.rs  status.rs
dashboard/src-tauri/src/commands/sessions/: manual_overrides.rs  mod.rs  mutations.rs  query.rs  rebuild.rs  split.rs  tests.rs
dashboard/src-tauri/src/db/: pool.rs
dashboard/src-tauri/src/db_migrations/: m01_vital_tables.rs  m02_file_activities.rs  m03_manual_sessions.rs  m04_sessions_unique.rs  m05_project_metadata.rs  m06_file_activities_v2.rs  m07_sessions_v2.rs  m08_estimates.rs  m09_timestamps.rs  m10_sessions_updated_at.rs  m11_session_project_cache.rs  m12_delta_sync.rs  m13_fix_updated_at.rs  m14_sync_markers.rs  m15_sync_merge_log.rs  m16_file_activity_spans.rs  m17_project_folder_meta.rs  m18_project_folder_tokens.rs  m19_clear_zero_hourly_rate.rs  m20_session_project_name.rs  m21_tombstone_session_sync_key.rs  m22_updated_at_indexes.rs  m23_project_merge.rs  m24_clients.rs  m25_clients_tombstone.rs  mod.rs  tombstone_triggers.rs
dashboard/src-tauri/src/mcp/: backup.rs  config.rs  mod.rs  protocol.rs  tools.rs
dashboard/src-tauri/src/webui/: auth.rs  config.rs  mod.rs  rpc.rs  rpc_generated.rs  server.rs
doc/: TODO.md  check_list.md  lan-sync-design.md  prompt.md
docs/: AI.md  AI_OPTIMAL_SETTINGS.md  CODING_STYLE.md  MCP_PROJECT_EDITING_MISSING_COMMANDS.md  PLAN-rounding-clients.md  PROMPT-lint-fixes.md  SECURITY_AUDIT.md  TODO.md  data-flow.html  i18n_plan.md  implementation_plan.md  map_UI.md  placeholder.txt  prompt.md  strings.md  sync_api_spec.md
fake_data/: 2025-06-03_fake.json  2025-06-04_fake.json  2025-06-05_fake.json  2025-06-10_fake.json  2025-06-11_fake.json  2025-06-13_fake.json  2025-06-16_fake.json  2025-06-17_fake.json  2025-06-19_fake.json  2025-06-20_fake.json  2025-06-23_fake.json  2025-06-24_fake.json  2025-06-25_fake.json  2025-06-26_fake.json  2025-06-27_fake.json  2025-06-30_fake.json  2025-07-01_fake.json  2025-07-02_fake.json  2025-07-03_fake.json  2025-07-04_fake.json  2025-07-05_fake.json  2025-07-07_fake.json  2025-07-09_fake.json  2025-07-10_fake.json  2025-07-11_fake.json  2025-07-12_fake.json  2025-07-14_fake.json  2025-07-15_fake.json  2025-07-16_fake.json  2025-07-17_fake.json  2025-07-18_fake.json  2025-07-21_fake.json  2025-07-22_fake.json  2025-07-23_fake.json  2025-07-24_fake.json  2025-07-25_fake.json  2025-07-26_fake.json  2025-07-28_fake.json  2025-07-29_fake.json  2025-07-30_fake.json  (+169 more)
scripts/: ODZYSKIWANIE_SESJI.md  lan_sync_simulator.py  recover_hidden_sessions.py
server/: package-lock.json
shared/: Cargo.toml  activity_classification.rs  daily_store.rs  lib.rs  monitored_app.rs  process_utils.rs  secret_store.rs  session_settings.rs  timeflow_paths.rs  title_parser.rs  version_compat.rs  webui_host.rs
shared/daily_store/: legacy.rs  read.rs  schema.rs  types.rs  write.rs
shared/sync/: checksum.rs  columns.rs  connection.rs  merge.rs  mod.rs  timestamp.rs  triggers.rs
src/: activity.rs  config.rs  firewall.rs  foreground_hook.rs  i18n.rs  lan_common.rs  lan_discovery.rs  lan_pair_throttle.rs  lan_pairing.rs  lan_server.rs  lan_sync_orchestrator.rs  main.rs  monitor.rs  monitor_macos.rs  online_async_delta.rs  online_ftp_transport.rs  online_store_forward.rs  online_sync.rs  process_utils.rs  sftp_client.rs  single_instance.rs  storage.rs  sync_common.rs  sync_encryption.rs  sync_trigger.rs  title_parser.rs  tombstone_triggers.rs  tracker.rs  tray.rs  webui_host_ctl.rs  (+1 more)
(+574 files in other folders)
