[package]
name = "timeflow-demon"
version = "0.2.0"
edition = "2021"
description = "Windows tray daemon z monitorem aplikacji"
autobins = false

[workspace]
members = [".", "dashboard/src-tauri", "shared"]
resolver = "2"

[[bin]]
name = "timeflow-demon"
path = "src/main.rs"

[dependencies]
# GUI system tray
native-windows-gui = { version = "1.0.13", default-features = false, features = [
    "message-window",
    "tray-notification",
    "menu",
    "embed-resource",
    "cursor",
    "animation-timer",
] }

# Serializacja JSON
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Data i czas
chrono = { version = "0.4", features = ["serde"] }

# Obsługa błędów
anyhow = "1.0"
rusqlite = { version = "0.31", features = ["bundled", "backup"] }

# Logowanie
log = { version = "0.4", features = ["std"] }
timeflow-shared = { path = "shared" }

# WinAPI
winapi = { version = "0.3", features = [
    "synchapi", "errhandlingapi", "winnt", "handleapi", "winuser",
    "processthreadsapi", "winbase", "tlhelp32", "minwindef", "shellapi",
] }

# Online sync
ssh2 = "0.9"
aes-gcm = "0.10"
flate2 = "1.0"
sha2 = "0.10"
hmac = "0.12"
base64 = "0.22"
ureq = { version = "2", features = ["tls"] }
getrandom = "0.2"

[target.'cfg(windows)'.dependencies]
wmi = "0.13"

[build-dependencies]
embed-resource = "3"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = "s"
lto = "thin"
codegen-units = 1
strip = false
panic = "abort"

[profile.release.package.timeflow-dashboard]
opt-level = 2
