[package]
name = "timeflow-shared"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"

[dependencies]
log = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }

# OS keychain (secret_store). keyring 3 defaults to a per-process MOCK store —
# a native backend MUST be enabled explicitly per platform, otherwise secrets
# would not persist nor be shared between the dashboard and the daemon.
[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["sync-secret-service", "crypto-rust"] }
