[package]
name = "timeflow-shared"
version = "0.1.5750"
edition = "2021"

[lib]
path = "lib.rs"

[dependencies]
log = { workspace = true }
rusqlite = { workspace = true, features = ["bundled"] }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
