[package]
name = "timeflow-dashboard"
version = "0.1.532"
description = "TimeFlow Dashboard"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
dotenvy = "0.15"

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"

tauri-plugin-fs = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["time"] }
# Required by BugHunter: direct SMTP transport with attachments and no extra HTTP backend.
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder", "hostname"] }
rfd = "0.14"
windows-sys = { version = "0.59", features = ["Win32_Security_Cryptography", "Win32_Foundation"] }
regex = "1"
timeflow-shared = { path = "../../shared" }
